fixed spacing on row-block

--- a/css_advanced/adv css/styles.css
+++ b/css_advanced/adv css/styles.css
@@ -174,6 +174,7 @@ h1 span {
   width: 1440px;
   height: 392px;
   margin: 0 auto;
+  padding: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -321,7 +322,9 @@ blockquote {
 .row-block {
   display: flex;
   justify-content: space-around;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  margin-top: 40px;
+  margin-left: 50px;
 }
 
 .item-block {
